[gd_scene load_steps=4 format=3 uid="uid://biuufe3qefg7c"]

[ext_resource type="Script" uid="uid://clp0v2jjyol71" path="res://Scripts/status_panel.gd" id="1_0tojk"]
[ext_resource type="PackedScene" uid="uid://bbgorfh5yvce0" path="res://model/Ship/shipver_2_hologram.tscn" id="2_7r1nm"]

[sub_resource type="World3D" id="World3D_0tojk"]

[node name="StatusPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tojk")

[node name="ShipUI" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="ShipUI"]
world_3d = SubResource("World3D_0tojk")
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ShipHolder" type="Node3D" parent="ShipUI/SubViewport"]

[node name="shipver2Hologram" parent="ShipUI/SubViewport/ShipHolder" instance=ExtResource("2_7r1nm")]

[node name="Camera3D" type="Camera3D" parent="ShipUI/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ShipUI/SubViewport/Camera3D"]

[connection signal="gui_input" from="ShipUI" to="." method="_on_ship_ui_gui_input"]
